# udemy-auto-enroller

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py
app/plugins/: handlers.py
app/server/: routes.py
