[tool.poetry]
name = "repl_nix_udemy-auto-enroller"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
Pyrogram = "^2.0.62"
TgCrypto = "^1.2.5"
selenium = "^4.6.0"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
