[tool.poetry]
name = "repl_nix_udemy-auto-enroller"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
Pyrogram = "^2.0.62"
TgCrypto = "^1.2.5"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
requests = "^2.28.1"
python = "^3.8"
selenium = "^3.141.0"
beautifulsoup4 = "^4.11.1"
"ruamel.yaml" = "^0.16.13"
cloudscraper = "^1.2.60"
requests = "^2.27.1"
webdriver-manager = "^3.7.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
price-parser = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
